--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,4 +5,10 @@ body {
 a {
   color: #00B7FF; }
 
+.error-message {
+  background-color: #e97a7a;
+  padding: 10px;
+  border-radius: 10px;
+  margin: 20px 0; }
+
 /*# sourceMappingURL=style.css.map */
