--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -6,3 +6,10 @@ body {
 a {
   color: #00B7FF;
 }
+
+.error-message { 
+  background-color: rgb(233, 122, 122);
+  padding: 10px;
+  border-radius: 10px;
+  margin: 20px 0;
+}
