--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -9,6 +9,7 @@
   <label for="password">Password</label>
   <input id="password" type="password" name="password" placeholder="Your password">
   <br>
+  
   {{#if message }}
     <div class="error-message">{{ message }}</div>
   {{/if}}
@@ -22,3 +23,6 @@
     <a href="/auth/login">Login</a>
   </p>
 </form>
+
+{{!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="/javascripts/auth.js"></script> --}}
