added cinema user route

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -2,13 +2,13 @@
 
 <form action="/auth/signup" method="POST" id="form-container">
   <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow"> 
+  <input id="username" type="text" name="username" placeholder="JonSnow" required> 
 
   <label for="password">Password</label>
-  <input id="password" type="password" name="password" placeholder="Your password">
+  <input id="password" type="password" name="password" placeholder="Your password" required>
   
   <label for="email">Email</label>
-  <input id="email" type="email" name="email" placeholder="Your e-mail">
+  <input id="email" type="email" name="email" placeholder="Your e-mail" required>
 
   {{#if message }}
     <div class="error-message">{{ message }}</div>
