--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,6 +11,8 @@
 
   <nav>
     <a href="/">Home</a>
+    <a href="/movie">Movies</a>
+    <a href="/cinema">Cinemas</a>
     <a href="/auth/login">Login</a>
     <a href="/auth/signup">Signup</a>
     <a href="/auth/logout">Logout</a>
