--- a/views/admin/admin-home.hbs
+++ b/views/admin/admin-home.hbs
@@ -4,7 +4,9 @@
 <div>
   <div style="font-size:20px;">{{name}}</div>
   <button class="edit-cinema"><a href="/admin/edit-cinema/{{id}}">EDIT</a></button>
-  <button class="add-room">ADD SCREENING</button>
+  <a href="/admin/add-screening/{{id}}/">create screening</a>
+  </form>
+
 </div><br>
 {{/each}}
 
