--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -14,6 +14,14 @@ a {
   margin: 20px 0;
 }
 
+.message-pos { 
+  background-color: rgb(126, 233, 122);
+  padding: 10px;
+  border-radius: 10px;
+  margin: 20px 0;
+}
+
+
 .movie-poster {
   max-width: 150px;
 }
