--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -1,4 +1,8 @@
-<h2>What would you like to edit?</h2>
+<h2>Hi {{user.username}}, What would you like to edit?</h2>
 <p><a href="/profile/edit/username">Edit username</a></p>
 <p><a href="/profile/edit/password">Edit password</a></p>
 <p><a href="/profile/edit/email">Edit e-mail</a></p>
+
+{{#if messagePos}}
+<div class="message-pos">{{messagePos}}</div>
+{{/if}}
