--- a/views/profile/overview.hbs
+++ b/views/profile/overview.hbs
@@ -1,4 +1,4 @@
-Hi {{username}}!
+Hi {{user.username}}!
 
 <p></p><a href="/profile/edit">Edit profile</a></p>
 <p></p><a href="/profile/tickets">Ticket overview</a></p>
