added change e-mail - edit profile complete

--- a/views/profile/edit-username.hbs
+++ b/views/profile/edit-username.hbs
@@ -1,8 +1,8 @@
 <p>Your current username is: <b>"{{user.username}}"</b></p>
 
 <form action="/profile/edit/username" method="POST" id="form-container"> 
-<label for="username">Username</label>
-<input id="username" type="text" name="username" value={{user.username}}>
+<label for="username">New username</label>
+<input id="username" type="text" name="username" value={{user.username}} required>
 
 {{#if message }}
 <div class="error-message">{{ message }}</div>
