added technical part for selecting a screening based on a picked date between today and 2 next weeks

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,4 +20,18 @@ a {
 .movie-poster {
   max-width: 150px; }
 
+nav {
+  margin-bottom: 10px; }
+
+.screeningDatePick {
+  margin: 5px;
+  padding: 5px;
+  background-color: #0f5e0f;
+  color: white;
+  border-radius: 5px;
+  display: inline-block; }
+
+.screeningDatePick a {
+  color: white; }
+
 /*# sourceMappingURL=style.css.map */
