--- a/views/cinema/overview.hbs
+++ b/views/cinema/overview.hbs
@@ -1,7 +1,8 @@
 {{#each cinemas}}
   <div class="cinema-overview-container">
     <h2>{{name}}</h2>
-    <p>@ {{city}}</p> 
+    {{!-- <p>@ {{address.city}}</p>  --}}
     <p><a href="/cinema/{{_id}}">More information</a></p>
+    <button><a href="/screening/{{id}}">Book tickets!</a></button>
   </div>
 {{/each}}
