--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,8 +14,9 @@
     <a href="/movie">Movies</a>
     <a href="/cinema">Cinemas</a>
     <a href="/auth/login">Login</a>
+    <a href="/profile">Profile</a>
     <a href="/auth/signup">Signup</a>
-    <a href="/auth/logout">Logout</a>
+    <a href="/auth/logout">Logout</a> 
   </nav>
 
   {{{body}}}
