--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -21,8 +21,23 @@ a {
   margin: 20px 0;
 }
 
-
 .movie-poster {
   max-width: 150px;
 }
 
+nav {
+  margin-bottom: 10px;
+}
+
+.screeningDatePick {
+  margin: 5px;
+  padding: 5px;
+  background-color: rgb(15, 94, 15);
+  color: white;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+.screeningDatePick a {
+  color: white;
+}
