--- a/views/profile/overview.hbs
+++ b/views/profile/overview.hbs
@@ -1,4 +1,4 @@
-Hi {{user.username}}!
+<h2>Hi {{user.username}}!</h2>
 
 <p></p><a href="/profile/edit">Edit profile</a></p>
 <p></p><a href="/profile/tickets">Ticket overview</a></p>
