seat plan added to Screenings

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,4 +14,10 @@ a {
 .movie-poster {
   max-width: 150px; }
 
+.row {
+  width: 20px;
+  height: 20px;
+  background-color: green;
+  border: 2px, solid, white; }
+
 /*# sourceMappingURL=style.css.map */
