--- a/views/screenings/overview.hbs
+++ b/views/screenings/overview.hbs
@@ -10,12 +10,12 @@
 <div id="screeningContainer"></div>
  
 
-{{#each screenings}}
+{{!-- {{#each screenings}}
 <p>Starts at: {{timeStart}}</p>
-{{!-- Date formatted --}}
+Date formatted
 <p>Date: {{formatDate date}}</p>
 <p>Movie: {{movieID.title}}</p>
-{{/each}}
+{{/each}} --}}
 
 <script src="../javascripts/moment.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
