added screening overview user and updated seed files

--- a/views/screenings/overview.hbs
+++ b/views/screenings/overview.hbs
@@ -5,8 +5,10 @@
   </span>
   {{/each}}
 </div> --}}
+<h2>{{cinema.name}} - {{cinema.address.city}}</h2>
 
 <div id="datePickerContainer"></div>
+<br><br>
 <div id="screeningContainer"></div>
  
 
