--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,11 +33,34 @@ nav {
 
 .screeningDatePick a {
   color: white; }
-  
+
 .row {
   width: 20px;
   height: 20px;
   background-color: green;
   border: 2px, solid, white; }
+
+#screeningContainer {
+  display: flex;
+  flex-wrap: wrap; }
+
+.movieTimesContainer {
+  display: flex;
+  background-color: #adff94;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 0px 10px 10px 0; }
+
+.movieTimesTimes {
+  margin: 20px;
+  display: flex;
+  flex-direction: column; }
+
+a.buttonTime {
+  float: left;
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px; }
 
 /*# sourceMappingURL=style.css.map */
