--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -42,9 +42,37 @@ nav {
   color: white;
 }
 
-.row{
+.row {
   width:20px;
   height:20px;
   background-color: green;
   border:2px, solid, white
+}
+
+// Screening view of user
+#screeningContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.movieTimesContainer {
+  display: flex;
+  background-color: rgb(173, 255, 148);
+  border-radius: 10px;
+  padding: 10px;
+  margin: 0px 10px 10px 0;
+}
+
+.movieTimesTimes {
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+a.buttonTime {
+  float: left;
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px;
 }
