fixed auto seeds screenings. Updated screening overview. Implemented momentJS for screenings so time is consistent everywhere, also in admin part

--- a/views/admin/screening-to-add.hbs
+++ b/views/admin/screening-to-add.hbs
@@ -21,13 +21,12 @@
   <fieldset id="timeStart">
     <div id="time-slot">
 
-
-
-
     </div>
   </fieldset>
 
   <button type="submit">create screening</button>
 </form>
+
+<script src="/javascripts/moment.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/javascripts/screening-to-add.js"></script>
