--- a/views/movie/overview.hbs
+++ b/views/movie/overview.hbs
@@ -2,5 +2,5 @@
 <img class = "movie-poster" src="{{imageUrl}}" alt="Poster of {{title}}">
 <h3>{{title}}</h3>
 <p>{{plot}}</p>
-<p>Release date: {{releaseDate}}</p>
+<p>Release date: {{formatDate releaseDate}}</p>
 {{/each}}
