--- a/views/tickets/ticket-selection.hbs
+++ b/views/tickets/ticket-selection.hbs
@@ -1,11 +1,21 @@
-<div>{{screening.movieID.title}}</div>
+<div>{{movieID.title}}</div>
+
+<div>{{cinemaID.name}}</div>
+
+<form action="">
+  <select>
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+  </select>
+</form>
 
 
 
 
 
 
-<div>{{roomName}}</div>
-{{#each screening.seatPlan}}
-<div class="row" id="row-{{row}}"></div>
-{{/each}}
