added room (which was sorta already there) but there is no post route yet :)

--- a/views/admin/cinema-to-add.hbs
+++ b/views/admin/cinema-to-add.hbs
@@ -1,6 +1,3 @@
-
-
-
 <form id="add-cinema" action="/admin/add-cinema/" method="POST">
   <div>
     <h1>Add new cinema</h1>
@@ -42,6 +39,23 @@
     <textarea name="publicTransport" rows="10" cols="30">{{transport.publicTransport}}</textarea><br>
   </div>
 
+  <div>
+    <h2>Rooms</h2>
+    <label for="roomName">Roomname:</label>
+    <input type="text" name="roomName" id="roomName">
+    <br><br>
+    <label for="screenType">Screen Type:</label>
+    <select name="screenType" id="">
+      <option value="2D">2D</option>
+      <option value="3D">3D</option>
+    </select>
+    <br><br>
+    <label for="rows"># of rows</label>
+    <input type="number" name="rows" id="rows">
+    <br><br>
+    <label for="cols"># of columns</label>
+    <input type="number" name="cols" id="cols">
+  </div>
   {{!-- <div>
     <h2><b>Rooms:</b></h2>
     {{#each rooms}}
