--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,6 +23,9 @@ a {
 nav {
   margin-bottom: 10px; }
 
+#datePickerContainer {
+  margin-bottom: 20px; }
+
 .screeningDatePick {
   margin: 5px;
   padding: 5px;
@@ -33,6 +36,9 @@ nav {
 
 .screeningDatePick a {
   color: white; }
+
+.screening-poster {
+  max-height: 250px; }
 
 .row {
   width: 20px;
@@ -46,21 +52,25 @@ nav {
 
 .movieTimesContainer {
   display: flex;
-  background-color: #adff94;
-  border-radius: 10px;
+  background-color: #b9ffa3;
+  border: 3px solid #388b1f;
   padding: 10px;
   margin: 0px 10px 10px 0; }
 
 .movieTimesTimes {
-  margin: 20px;
+  margin: 0  20px;
   display: flex;
   flex-direction: column; }
 
 a.buttonTime {
   float: left;
   background-color: white;
-  border-radius: 5px;
-  padding: 5px;
-  margin: 5px; }
+  color: black;
+  padding: 15px;
+  margin: 5px;
+  text-decoration: none; }
+
+a.buttonTime:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
 
 /*# sourceMappingURL=style.css.map */
