--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -29,6 +29,10 @@ nav {
   margin-bottom: 10px;
 }
 
+#datePickerContainer {
+  margin-bottom: 20px;
+}
+
 .screeningDatePick {
   margin: 5px;
   padding: 5px;
@@ -40,6 +44,10 @@ nav {
 
 .screeningDatePick a {
   color: white;
+}
+
+.screening-poster {
+  max-height: 250px;
 }
 
 .row {
@@ -57,22 +65,28 @@ nav {
 
 .movieTimesContainer {
   display: flex;
-  background-color: rgb(173, 255, 148);
-  border-radius: 10px;
+  background-color: rgb(185, 255, 163);
+  border: 3px solid rgb(56, 139, 31);
+  // border-radius: 10px;
   padding: 10px;
   margin: 0px 10px 10px 0;
 }
 
 .movieTimesTimes {
-  margin: 20px;
+  margin: 0  20px;
   display: flex;
   flex-direction: column;
 }
 
 a.buttonTime {
   float: left;
-  background-color: white;
-  border-radius: 5px;
-  padding: 5px;
+  background-color: white; 
+  color: black;
+  padding: 15px;
   margin: 5px;
+  text-decoration: none;
+}
+
+a.buttonTime:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
