--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,7 @@
   <nav>
     <a href="/">Home</a>
     <a href="/movie">Movies</a>
-    <a href="/cinema">Cinemas</a>
+    <a href="/cinema">Cinemas & Tickets</a>
     <a href="/auth/login">Login</a>
     <a href="/profile">Profile</a>
     <a href="/auth/signup">Signup</a>
