--- a/views/screenings/overview.hbs
+++ b/views/screenings/overview.hbs
@@ -8,6 +8,10 @@
 <h2>{{cinema.name}} - {{cinema.address.city}}</h2>
 
 <div id="datePickerContainer"></div> 
+{{!-- <select name="filterMovie" id="filterMovie">
+  <option value="">All</option>
+  <option value="5cb8c7c63c22b504d04b9b2a">Captain Marvel</option>
+</select> --}}
 <div id="screeningContainer"></div>
  
 
