--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,24 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: black;
+  color: white; }
 
-a {
-  color: #00B7FF; }
+a, p, h1, h2, h3, h4, h5, h6, li, button {
+  color: white; }
+
+button {
+  background-color: black; }
+
+nav {
+  margin-bottom: 40px; }
+
+nav a {
+  margin-right: 5px;
+  font-size: 120%;
+  text-decoration: none;
+  border: 1px solid white;
+  padding: 10px; }
 
 .error-message {
   background-color: #e97a7a;
@@ -17,11 +32,27 @@ a {
   border-radius: 10px;
   margin: 20px 0; }
 
-.movie-poster {
+.movie-overview-container {
+  display: flex; }
+
+.movie-overview {
+  display: flex;
+  margin: 20px; }
+
+.movie-overview-poster {
   max-width: 150px; }
 
-nav {
-  margin-bottom: 10px; }
+.movie-overview-text {
+  width: 200px;
+  margin: 0 10px; }
+
+.movie-overview-text-plot {
+  max-height: 120px;
+  overflow: hidden;
+  text-overflow: ellipsis; }
+
+.movie-poster {
+  max-width: 150px; }
 
 #datePickerContainer {
   margin-bottom: 20px; }
@@ -52,25 +83,26 @@ nav {
 
 .movieTimesContainer {
   display: flex;
-  background-color: #b9ffa3;
-  border: 3px solid #388b1f;
+  background-color: black;
+  border: 3px solid #8b1f1f;
   padding: 10px;
   margin: 0px 10px 10px 0; }
 
 .movieTimesTimes {
   margin: 0  20px;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  max-width: 150px; }
 
 a.buttonTime {
   float: left;
   background-color: white;
   color: black;
-  padding: 15px;
+  padding: 5px 15px;
   margin: 5px;
   text-decoration: none; }
 
 a.buttonTime:hover {
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
+  box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(253, 253, 253, 0.19); }
 
 /*# sourceMappingURL=style.css.map */
