--- a/views/tickets/ticket-selection.hbs
+++ b/views/tickets/ticket-selection.hbs
@@ -2,8 +2,8 @@
 
 <div>{{cinemaID.name}}</div>
 
-<form action="">
-  <select>
+Number of tickets: <form action="/tickets/{{id}}" method="POST">
+  <select name="tickets">
     <option value="1">1</option>
     <option value="2">2</option>
     <option value="3">3</option>
@@ -12,10 +12,8 @@
     <option value="6">6</option>
     <option value="7">7</option>
   </select>
+  <input type='submit' name='submit'/>
 </form>
 
-
-
-
-
-
+{{!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="/javascripts/ticket-reservation.js"></script> --}}
