--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,23 +33,23 @@ nav a {
   margin: 20px 0; }
 
 .movie-overview-container {
-  display: flex; }
+  display: flex;
+  flex-wrap: wrap; }
 
 .movie-overview {
   display: flex;
-  margin: 20px; }
-
-.movie-overview-poster {
-  max-width: 150px; }
+  margin: 20px 0; }
 
 .movie-overview-text {
   width: 200px;
-  margin: 0 10px; }
+  margin: 0 20px; }
 
-.movie-overview-text-plot {
-  max-height: 120px;
-  overflow: hidden;
-  text-overflow: ellipsis; }
+.movie-details-container {
+  display: flex; }
+
+.movie-details-text {
+  max-width: 450px;
+  margin-right: 20px; }
 
 .movie-poster {
   max-width: 150px; }
@@ -102,9 +102,6 @@ a.buttonTime {
   margin: 5px;
   text-decoration: none; }
 
-a.buttonTime:hover {
-  box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(253, 253, 253, 0.19); }
-
 #tickets-container {
   display: flex;
   width: 70vw;
@@ -140,5 +137,8 @@ a.buttonTime:hover {
 
 .booked {
   background-color: red; }
+
+a.buttonTime:hover {
+  box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(253, 253, 253, 0.19); }
 
 /*# sourceMappingURL=style.css.map */
