--- a/views/movie/overview.hbs
+++ b/views/movie/overview.hbs
@@ -4,7 +4,7 @@
     <img class="movie-overview-poster" src="{{imageUrl}}" alt="Poster of {{title}}">
     <div class="movie-overview-text">
       <h3>{{title}}</h3>
-      <p class="movie-overview-text-plot">{{plot}}</p> 
+      <p class="movie-overview-text-plot">{{truncate plot 220}}</p> 
       <button><a href="/movie/{{_id}}">More information</a></button>
     </div>
     <br>
