--- a/views/tickets/ticket-selection_sp.hbs
+++ b/views/tickets/ticket-selection_sp.hbs
@@ -1,13 +1,14 @@
 <div id="tickets-container">
   <div id="info">
     <div id="movie-name"></div>
-    <div id="place-time-info"><span id="cinema-name"> </span><span id="room-name"> |</span><span id="time"> |</span></div>
+    <div id="place-time-info"><span id="cinema-name"> </span><span id="room-name"> |</span><span id="time"> |</span>
+    </div>
     <div><img src="" alt="" id="movie-img"></div>
     <div id="cinema-name"></div>
     <div id="movie-time"></div>
   </div>
 
-  <div id="tickets">
+  {{!-- <div id="tickets">
     <label for="ticket-number">Number of tickets:</label>
     <select name="ticket-number" id="ticket-number">
       <option value="1">1</option>
@@ -18,14 +19,24 @@
       <option value="6">6</option>
       <option value="7">7</option>
     </select>
-  </div>
+  </div> --}}
 
   <div id="chairs">
 
   </div>
 
+  <div id="reservation">
+    <h2>Your order</h2>
+    <div>
+      <span id="room"></span>
+      <div><span>Number of tickets:</span><span id="number-of-tickets">0</span></div>
+    </div>
+    <div id="selected-seats"></div>
+    <div><button id="book-movie" type="submit">MAKE RESERVATION</button></div>
+  </div>
+
 </div>
-<div><button id="book-movie" type="submit">MAKE RESERVATION</button></div>
+
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/javascripts/ticket-reservation.js"></script>
