--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,10 +47,18 @@ nav a {
 
 .movie-overview {
   display: flex;
+  margin: 20px; }
+
+.movie-overview-poster {
+  max-width: 150px;
   margin: 20px 0; }
 
 .movie-overview-text {
   width: 200px;
+  margin: 0 10px; }
+
+.movie-overview-text-plot {
+  max-height: 120px;
   margin: 0 30px; }
 
 .movie-details-container {
@@ -151,7 +159,6 @@ a.buttonTime {
 a.buttonTime:hover {
   box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(253, 253, 253, 0.19); }
 
-
 #info {
   display: flex;
   flex-direction: column;
@@ -188,6 +195,5 @@ a.buttonTime:hover {
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
-
 
 /*# sourceMappingURL=style.css.map */
