--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -76,8 +76,8 @@ nav a {
 .movie-overview-text-plot {
   max-height: 120px;
   // white-space: nowrap;  
-  overflow: hidden;
-  text-overflow: ellipsis;
+  // overflow: hidden;
+  // text-overflow: ellipsis;
 
   margin: 0 30px;
 
