--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -264,3 +264,8 @@ a.buttonTime:hover {
   flex-direction: column;
   justify-content: space-between;
 }
+
+#map {
+  width: 50%;
+  height: 500px;
+}
