--- a/views/admin/cinema-to-add.hbs
+++ b/views/admin/cinema-to-add.hbs
@@ -17,6 +17,11 @@
     <input type="text" name="owner" id="owner"><br>
     <label for="city">City</label>
     <input type="text" name="city" id="city"><br>
+    <label for="latitude">Latitude</label>
+    <input type="text" name="latitude" placeholder="latitude">
+    <label for="longitude">Longitude</label>
+    <input type="text" name="longitude" placeholder="longitude">
+
 
   </div>
 
@@ -55,5 +60,5 @@
   <input type="submit" value="ADD CINEMA">
 
 </form>
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQpT4J3WNKmNaE4gDHqBLm1ma2nUcUkkI"></script>
 <script src="/javascripts/cinema-to-add.js"></script>
