Finished home page and edit movies, start of file upload

--- a/views/admin/admin-home.hbs
+++ b/views/admin/admin-home.hbs
@@ -22,6 +22,7 @@
 <div>
   <button><a href="/admin/add-cinema">Add a new cinema</a></button>
   <button><a href="/admin/add-movie">Add a new movie</a></button>
+  <button><a href="/admin/edit-movie">Edit movies</a></button>
 </div>
 
 
