--- a/views/cinema/details.hbs
+++ b/views/cinema/details.hbs
@@ -28,6 +28,6 @@
 
 <div id="map"></div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQpT4J3WNKmNaE4gDHqBLm1ma2nUcUkkI"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key="></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script type="text/javascript" src="/javascripts/cinema-details.js"></script>
