--- a/views/profile/edit-email.hbs
+++ b/views/profile/edit-email.hbs
@@ -1,12 +1,18 @@
 <p>Your current e-mail is: <b>"{{user.email}}"</b></p>
 
-<form action="/profile/edit/email" method="POST" id="form-container"> 
-<label for="email">New e-mail</label>
-<input id="email" type="email" name="email" value={{user.email}} required>
+<form action="/profile/edit/email" method="POST" id="form-container">
+  <div class="formContainer">
+    <div class="formLabels">
+      <label for="email">New e-mail</label>
+    </div>
 
-{{#if message }}
-<div class="error-message">{{ message }}</div>
-{{/if}}
+    <div class="formInput">
+      <input id="email" type="email" name="email" value={{user.email}} required>
+    </div>
+  </div>
+  {{#if message }}
+  <div class="error-message">{{ message }}</div>
+  {{/if}}
 
-<button>Confirm change</button>
+  <button>Confirm change</button>
 </form>
