--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -1,7 +1,7 @@
 <h2>Hi {{user.username}}, What would you like to edit?</h2>
-<p><a href="/profile/edit/username">Edit username</a></p>
-<p><a href="/profile/edit/password">Edit password</a></p>
-<p><a href="/profile/edit/email">Edit e-mail</a></p>
+<button><a href="/profile/edit/username">edit username</a></button>
+<button><a href="/profile/edit/password">edit password</a></button>
+<button><a href="/profile/edit/email">edit email</a></button>
 
 {{#if messagePos}}
 <div class="message-pos">{{messagePos}}</div>
