--- a/views/profile/overview.hbs
+++ b/views/profile/overview.hbs
@@ -1,11 +1,12 @@
 <h2>Hi {{user.username}}!</h2>
 
-<p></p><a href="/profile/edit">Edit profile</a></p>
-<p></p><a href="/profile/tickets">Ticket overview</a></p>
+<button><a href="/profile/edit">Edit profile</a></button>
+<button><a href="/profile/tickets">Ticket overview</a></button>
 
-<form action="/profile/upload" method="post" enctype="multipart/form-data">
+{{!-- <form action="/profile/upload" method="post" enctype="multipart/form-data">
   <input type="file" name="profile-image"><br><br>
   <button type="submit" name="submit-profile-image">Upload picture</button>
-</form>
+</form> --}}
+
 <p>The last movie you saw was [[MOVIE]], we hope you liked it!</p>
 [[MOVIE IMG]]
