--- a/views/screenings/overview.hbs
+++ b/views/screenings/overview.hbs
@@ -1,17 +1,12 @@
-{{!-- <div class="datePickerContainer">
-  {{#each datePicker}}
-  <span class="screeningDatePick">
-    <a href=".?date={{formatDate this}}">{{formatDate this}}</a>
-  </span>
-  {{/each}}
-</div> --}}
+ 
 <h2>{{cinema.name}} - {{cinema.address.city}}</h2>
 
 <div id="datePickerContainer"></div> 
-{{!-- <select name="filterMovie" id="filterMovie">
-  <option value="">All</option>
-  <option value="5cb8c7c63c22b504d04b9b2a">Captain Marvel</option>
-</select> --}}
+<div id="datePickerContainer-mobile-div">
+  <label for="">Pick a date: </label>
+  <select id="datePickerContainer-mobile"></select>
+</div> 
+ 
 <div id="screeningContainer"></div>
  
 
