--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,23 +1,27 @@
+* {
+  box-sizing: border-box; }
+
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: black;
+  font-family: 'Roboto Condensed', sans-serif;
+  background-color: #272727;
   color: white; }
 
 a,
 p,
-h1,
-h2,
-h3,
 h4,
 h5,
 h6,
-li,
-button {
+li {
   color: white; }
 
-button {
-  background-color: black; }
+h1, h3 {
+  color: #FE4A28;
+  margin-bottom: 10px; }
+
+h2 {
+  color: #B5E5BF;
+  margin-top: 10px; }
 
 nav {
   margin-bottom: 40px; }
@@ -29,6 +33,15 @@ nav a {
   border: 1px solid white;
   padding: 10px; }
 
+button a {
+  text-decoration: none; }
+
+button {
+  padding: 10px;
+  background-color: #FE4A28;
+  border: 1px solid black;
+  color: white; }
+
 .error-message {
   background-color: #e97a7a;
   padding: 10px;
@@ -36,10 +49,11 @@ nav a {
   margin: 20px 0; }
 
 .message-pos {
-  background-color: #7ee97a;
+  background-color: #B5E5BF;
   padding: 10px;
   border-radius: 10px;
-  margin: 20px 0; }
+  margin: 20px 0;
+  color: black; }
 
 .movie-overview-container {
   display: flex;
@@ -51,13 +65,10 @@ nav a {
 
 .movie-overview-text {
   width: 200px;
-  margin: 0 10px; }
-
-.movie-overview-text-plot {
-  max-height: 120px;
-  overflow: hidden;
-  text-overflow: ellipsis;
   margin: 0 30px; }
+
+.movie-overview-button-mobile {
+  display: none; }
 
 .movie-details-container {
   display: flex; }
@@ -71,6 +82,9 @@ nav a {
 
 #datePickerContainer {
   margin-bottom: 20px; }
+
+#datePickerContainer-mobile-div {
+  display: none; }
 
 .screeningDatePick {
   margin: 5px;
@@ -86,76 +100,37 @@ nav a {
 .screening-poster {
   max-height: 250px; }
 
-.row {
-  width: 20px;
-  height: 20px;
-  background-color: green;
-  border: 2px, solid, white; }
-
-#screeningContainer {
-  display: flex;
-  flex-wrap: wrap; }
-
-.movieTimesContainer {
-  display: flex;
-  background-color: black;
-  border: 3px solid #8b1f1f;
-  padding: 10px;
-  margin: 0px 10px 10px 0; }
-
-.movieTimesTimes {
-  margin: 0 20px;
-  display: flex;
-  flex-direction: column;
-  max-width: 150px; }
-
-a.buttonTime {
-  float: left;
-  background-color: white;
-  color: black;
-  padding: 5px 15px;
-  margin: 5px;
-  text-decoration: none; }
-
 #tickets-container {
   display: flex;
-  width: 80vw;
-  height: 70vh;
-  justify-content: space-between;
-  margin-top: 10vh; }
+  justify-content: space-between; }
 
 #movie-img {
   width: 300px;
   height: auto; }
 
-.col {
-  width: 60px;
-  height: 60px;
-  border: 5px solid white; }
-
-.true {
-  background-color: green; }
-
-.false {
-  background-color: red; }
-
-.row {
-  width: 700px;
-  height: 70px;
-  display: flex; }
-
 #chairs {
   width: 700px;
   height: 700px; }
 
+.row {
+  display: flex; }
+
+.col {
+  width: 30px;
+  height: 30px;
+  border: 2px solid white; }
+
+.true {
+  background-color: #CCD4E1; }
+
+.false {
+  background-color: #FE4A28; }
+
 .selected {
-  background-color: blue; }
+  background-color: #33df55; }
 
 .booked {
-  background-color: red; }
-
-a.buttonTime:hover {
-  box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(253, 253, 253, 0.19); }
+  background-color: #FE4A28; }
 
 #info {
   display: flex;
@@ -165,8 +140,8 @@ a.buttonTime:hover {
 #screen {
   height: 20px;
   width: 100%;
-  background-color: yellow;
-  margin-bottom: 30px;
+  background-color: #B5E5BF;
+  margin: 20px 0;
   color: black;
   font-weight: bold;
   text-align: center; }
@@ -181,21 +156,170 @@ a.buttonTime:hover {
   height: 20px; }
 
 #green {
-  background-color: green; }
+  background-color: #CCD4E1; }
 
 #blue {
-  background-color: blue; }
+  background-color: #33df55; }
 
 #red {
-  background-color: red; }
+  background-color: #FE4A28; }
 
 #reservation {
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
 
+#book-movie {
+  margin-top: 20px; }
+
+#screeningContainer {
+  display: flex;
+  flex-wrap: wrap; }
+
+.movieTimesContainer {
+  display: flex;
+  justify-content: space-around;
+  background-color: black;
+  padding: 10px;
+  margin: 0px 10px 10px 0; }
+
+.movieTimesTimes {
+  margin: 0 20px;
+  display: flex;
+  flex-direction: column;
+  max-width: 150px; }
+
+a.buttonTime {
+  float: left;
+  background-color: #FE4A28;
+  padding: 5px 15px;
+  margin: 5px;
+  text-decoration: none; }
+
+a.buttonTime:hover {
+  box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(253, 253, 253, 0.19); }
+
 #map {
-  width: 50%;
-  height: 500px; }
+  width: 100%;
+  height: 500px;
+  margin: 20px 0; }
+
+footer span, .header-authentication span {
+  margin: 0px 5px; }
+
+footer {
+  display: flex;
+  justify-content: center;
+  background-color: #FE4A28;
+  padding: 10px;
+  margin-top: 20px;
+  bottom: 20px; }
+
+.cinema-overview-container {
+  margin: 30px 0; }
+
+.cinema-overview-address {
+  margin-top: 0; }
+
+.cinema-overview-container h2 {
+  margin-bottom: 0px; }
+
+footer a {
+  color: black;
+  text-decoration: none; }
+
+footer span {
+  color: black; }
+
+header {
+  display: flex;
+  flex-direction: column; }
+
+.header-authentication {
+  align-self: flex-end;
+  margin-bottom: 10px; }
+
+.header-authentication a {
+  text-decoration: none; }
+
+.header-menu {
+  display: flex;
+  margin-bottom: 20px; }
+
+.header-menu-mobile {
+  display: none; }
+
+.header-menu-mobile a {
+  margin: 0; }
+
+.header-menu-mobile a:hover {
+  background-color: #FE4A28; }
+
+.formContainer {
+  display: flex;
+  margin-bottom: 20px; }
+
+label, input {
+  display: inline-block;
+  margin: 5px 0; }
+
+label {
+  margin-right: 10px; }
+
+::placeholder {
+  color: #afaeae; }
+
+@media screen and (max-width: 600px) {
+  body {
+    padding: 20px; }
+  .header-menu {
+    display: none; }
+  .header-menu-mobile {
+    display: flex;
+    justify-content: space-between;
+    background-color: #CCD4E1;
+    margin-bottom: 10px; }
+  nav a {
+    border: none; }
+  .glide__arrows {
+    display: none; }
+  .movie-overview {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center; }
+  .movie-overview-poster {
+    margin: auto; }
+  .movie-overview-text {
+    display: none; }
+  .movie-overview-button-mobile {
+    display: inline-block;
+    width: 150px;
+    margin: auto; }
+  #map {
+    height: 200px; }
+  #datePickerContainer {
+    display: none; }
+  #datePickerContainer-mobile-div {
+    display: block;
+    margin-bottom: 20px; }
+  .screening-poster {
+    max-width: 100px; }
+  .movieTimesTimes h3 {
+    display: none; }
+  .movieTimesTimes {
+    margin: auto 0; }
+  .movieTimesContainer {
+    width: 100%; }
+  #tickets-container {
+    flex-direction: column; }
+  .tickets-movie-image {
+    display: none; }
+  #chairs {
+    width: 100%;
+    height: auto; }
+  #reservation h2 {
+    margin: 20px 0 10px 0; }
+  .row {
+    justify-content: center; } }
 
 /*# sourceMappingURL=style.css.map */
