--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,26 +1,33 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: black;
-  color: white;
+  font-family: 'Roboto Condensed', sans-serif; 
+  background-color: #272727;
+  color: white; 
 }
 
 a,
-p,
-h1,
-h2,
-h3,
+p,  
 h4,
 h5,
 h6,
-li,
-button {
+li {
   color: white;
 }
 
-button {
-  background-color: black;
+h1, h3 {
+  color: #FE4A28;
+  margin-bottom: 10px;
 }
+
+h2 {
+  color: #B5E5BF;
+  margin-top: 10px;
+}
+ 
 
 nav {
   margin-bottom: 40px;
@@ -34,6 +41,18 @@ nav a {
   padding: 10px;
 }
 
+button a {
+  text-decoration: none;
+}
+
+
+button {
+  padding: 10px;
+  background-color: #FE4A28;
+  border: 1px solid black; 
+  color: white;
+}
+ 
 .error-message {
   background-color: rgb(233, 122, 122);
   padding: 10px;
@@ -42,10 +61,11 @@ nav a {
 }
 
 .message-pos {
-  background-color: rgb(126, 233, 122);
+  background-color: #B5E5BF;
   padding: 10px;
   border-radius: 10px;
   margin: 20px 0;
+  color: black;
 }
 
 // ----------------------------
@@ -61,6 +81,9 @@ nav a {
 .movie-overview-text {
   width: 200px;
   margin: 0 30px;
+}
+.movie-overview-button-mobile {
+  display: none;
 }
 // movie overview page - end
 // ----------------------------
@@ -89,6 +112,9 @@ nav a {
 #datePickerContainer {
   margin-bottom: 20px;
 }
+#datePickerContainer-mobile-div {
+  display: none;
+}
 
 .screeningDatePick {
   margin: 5px;
@@ -99,6 +125,8 @@ nav a {
   display: inline-block;
 }
 
+
+
 .screeningDatePick a {
   color: white;
 }
@@ -107,50 +135,13 @@ nav a {
   max-height: 250px;
 }
 
-.row {
-  width: 20px;
-  height: 20px;
-  background-color: green;
-  border: 2px, solid, white
-}
-
-// Screening view of user
-#screeningContainer {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.movieTimesContainer {
-  display: flex;
-  background-color: rgb(0, 0, 0);
-  border: 3px solid rgb(139, 31, 31);
-  // border-radius: 10px;
-  padding: 10px;
-  margin: 0px 10px 10px 0;
-}
-
-.movieTimesTimes {
-  margin: 0 20px;
-  display: flex;
-  flex-direction: column;
-  max-width: 150px;
-}
-
-a.buttonTime {
-  float: left;
-  background-color: white;
-  color: black;
-  padding: 5px 15px;
-  margin: 5px;
-  text-decoration: none;
-}
-
+// --- start Tickets / seatplan -----
 #tickets-container {
   display: flex;
-  width: 80vw;
-  height: 70vh;
+  // width: 80vw;
+  // height: 70vh;
   justify-content: space-between;
-  margin-top: 10vh
+  // margin-top: 10vh
 }
 
 #movie-img {
@@ -158,44 +149,42 @@ a.buttonTime {
   height: auto;
 }
 
-.col {
-  width: 60px;
-  height: 60px;
-  border: 5px solid white;
-}
-
-.true {
-  background-color: green;
-}
-
-.false {
-  background-color: red;
-}
-
-.row {
-  width: 700px;
-  height: 70px;
-  display: flex;
-}
 
 #chairs {
   width: 700px;
-  height: 700px;
+  height: 700px; 
+}
 
+.row {
+  // width: 700px;
+  // height: 70px;
+  display: flex;
+  // width: 20px;
+  // height: 20px;
+  // border: 2px solid white; 
+}
+
+.col {
+  width: 30px;
+  height: 30px;
+  border: 2px solid white;
+}
+
+.true {
+  background-color: #CCD4E1;
+}
+
+.false {
+  background-color: #FE4A28;
 }
 
 .selected {
-  background-color: blue;
+  background-color: rgb(51, 223, 85);
 }
 
 .booked {
-  background-color: red;
-
-}
-
-a.buttonTime:hover {
-  box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(253, 253, 253, 0.19);
-}
+  background-color: #FE4A28;
+} 
 
 #info {
   display: flex;
@@ -208,8 +197,8 @@ a.buttonTime:hover {
 #screen {
   height: 20px;
   width: 100%;
-  background-color: yellow;
-  margin-bottom: 30px;
+  background-color: #B5E5BF;
+  margin: 20px 0;
   color: black;
   font-weight: bold;
   text-align: center;
@@ -227,15 +216,15 @@ a.buttonTime:hover {
 }
 
 #green {
-  background-color: green;
+  background-color: #CCD4E1
 }
 
 #blue {
-  background-color: blue;
+  background-color: rgb(51, 223, 85);
 }
 
 #red {
-  background-color: red;
+  background-color: #FE4A28
 }
 
 #reservation {
@@ -243,8 +232,222 @@ a.buttonTime:hover {
   flex-direction: column;
   justify-content: space-between;
 }
+ 
+#book-movie {
+  margin-top: 20px;
+}
+// --- end Tickets / seatplan -----
+
+// Screening view of user
+#screeningContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.movieTimesContainer {
+  display: flex;
+  justify-content: space-around;
+  background-color: rgb(0, 0, 0);
+  // border: 3px solid rgb(139, 31, 31);
+  // border-radius: 10px;
+  padding: 10px;
+  margin: 0px 10px 10px 0;
+}
+
+.movieTimesTimes {
+  margin: 0 20px;
+  display: flex;
+  flex-direction: column;
+  max-width: 150px;
+}
+
+a.buttonTime {
+  float: left;
+  background-color: #FE4A28; 
+  padding: 5px 15px;
+  margin: 5px;
+  text-decoration: none;
+}
+
+
+
+a.buttonTime:hover {
+  box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(253, 253, 253, 0.19);
+}
+
+
 
 #map {
-  width: 50%;
+  width: 100%;
   height: 500px;
+  margin: 20px 0;
 }
+
+footer span, .header-authentication span {
+  margin: 0px 5px;
+}
+
+
+
+// footer
+footer { 
+  display: flex;
+  justify-content: center; 
+  background-color: #FE4A28; 
+  padding: 10px;
+  margin-top: 20px;
+  // position: sticky;
+  bottom: 20px;   
+}
+
+// -- start Cinema overview ---------------
+.cinema-overview-container {
+  margin: 30px 0;
+}
+.cinema-overview-address {
+  margin-top: 0; 
+}
+.cinema-overview-container h2 {
+  margin-bottom: 0px;
+}
+// -- end Cinema overview --------------
+
+footer a {
+  color: black;
+  text-decoration: none;
+} 
+
+footer span {
+  color: black;
+}
+// Header
+header {
+  display: flex;
+  flex-direction: column;
+}
+
+.header-authentication { 
+  align-self: flex-end;
+  margin-bottom: 10px;
+}
+
+.header-authentication a {
+  text-decoration: none;
+} 
+
+
+.header-menu {
+  display: flex;
+  margin-bottom: 20px; 
+}
+
+.header-menu-mobile {
+  display: none;
+}
+
+.header-menu-mobile a {
+  margin: 0;
+}
+
+.header-menu-mobile a:hover {
+  background-color: #FE4A28;
+} 
+
+// --- start Forms ---
+.formContainer {
+  display : flex;
+  margin-bottom: 20px;
+}
+label, input {
+  display: inline-block;
+  margin: 5px 0;
+}
+label {
+  margin-right: 10px;
+}
+::placeholder {
+  color: rgb(175, 174, 174);
+}
+// -- end Forms -----
+
+// Media queries Movie < 480px
+@media screen and (max-width: 600px) {
+  body { 
+    padding: 20px;
+  }
+  // hide menu and the nav border for buttons
+  .header-menu {
+    display: none;
+  }
+  .header-menu-mobile {
+    display: flex;
+    justify-content: space-between;
+    background-color: #CCD4E1;
+    margin-bottom: 10px;
+  }
+  nav a {
+    border: none;
+  } 
+  .glide__arrows {
+    display: none;
+  }
+  // movies
+  .movie-overview {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .movie-overview-poster { 
+    margin: auto;
+  }
+  .movie-overview-text {
+    display: none; 
+  }  
+  .movie-overview-button-mobile {
+    display: inline-block; 
+    width: 150px;
+    margin: auto;
+  }
+  // cinema
+  #map { 
+    height: 200px;
+  }
+  // screening
+  #datePickerContainer {
+    display: none;
+  }
+  #datePickerContainer-mobile-div {
+    display: block;
+    margin-bottom: 20px;
+  }
+  .screening-poster {
+    max-width: 100px;
+  }
+  .movieTimesTimes h3 {
+    display: none; 
+  }
+  .movieTimesTimes {
+    margin: auto 0;
+  }
+  .movieTimesContainer {
+    width: 100%;
+  }
+  // seat plan
+  #tickets-container {
+    flex-direction: column;
+  }
+  .tickets-movie-image {
+    display: none;
+  }
+  #chairs {
+    width: 100%;
+    height: auto;
+  }
+  #reservation h2 {
+    margin: 20px 0 10px 0;
+  }
+  .row {
+    justify-content: center;
+  }
+}
+ 
