--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,20 +1,25 @@
 <h2>Signup</h2>
 
 <form action="/auth/signup" method="POST" id="form-container">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow" required> 
-
-  <label for="password">Password</label>
-  <input id="password" type="password" name="password" placeholder="Your password" required>
+  <div class="formContainer">
+    <div class="formLabels">
+      <label for="username">Username</label>
+      <label for="password">Password</label>
+      <label for="email">Email</label>
+    </div>
   
-  <label for="email">Email</label>
-  <input id="email" type="email" name="email" placeholder="Your e-mail" required>
+    <div class="formInput">
+      <input id="username" type="text" name="username" placeholder="your username" required>
+      <input id="password" type="password" name="password" placeholder="your password" required>
+      <input id="email" type="email" name="email" placeholder="your e-mail" required>
+    </div>
+  </div>
 
   {{#if message }}
-    <div class="error-message">{{ message }}</div>
+  <div class="error-message">{{ message }}</div>
   {{/if}}
 
-  <button>Create account</button>
+  <button>create account</button>
 
   <p class="account-message">
     Do you already have an account?
