--- a/views/profile/edit-password.hbs
+++ b/views/profile/edit-password.hbs
@@ -1,16 +1,20 @@
 <h2>Set a new password</h2>
 
-<form action="/profile/edit/password" method="POST" id="form-container"> 
+<form action="/profile/edit/password" method="POST" id="form-container">
+  <div class="formContainer">
+    <div class="formLabels">
+      <label for="password">Current password</label>
+      <label for="new-password">New password</label>
+    </div>
 
-<label for="password">Current password</label>
-<input id="password" type="text" name="password" required>
+    <div class="formInput">
+      <input id="password" type="password" name="password" required>
+      <input id="new-password" type="password" name="newPassword" required>
+    </div>
+  </div>
+  {{#if message }}
+  <div class="error-message">{{ message }}</div>
+  {{/if}}
 
-<label for="new-password">New password</label>
-<input id="new-password" type="text" name="newPassword" required>
-
-{{#if message }}
-<div class="error-message">{{ message }}</div>
-{{/if}}
-
-<button>Confirm change</button>
+  <button>Confirm change</button>
 </form>
