--- a/views/profile/edit-username.hbs
+++ b/views/profile/edit-username.hbs
@@ -1,12 +1,18 @@
 <p>Your current username is: <b>"{{user.username}}"</b></p>
 
-<form action="/profile/edit/username" method="POST" id="form-container"> 
-<label for="username">New username</label>
-<input id="username" type="text" name="username" value={{user.username}} required>
+<form action="/profile/edit/username" method="POST" id="form-container">
+  <div class="formContainer">
+    <div class="formLabels">
+      <label for="username">New username: </label>
+    </div>
 
-{{#if message }}
-<div class="error-message">{{ message }}</div>
-{{/if}}
+    <div class="formInput">
+      <input id="username" type="text" name="username" required>
+    </div>
+  </div>
+  {{#if message }}
+  <div class="error-message">{{ message }}</div>
+  {{/if}}
 
-<button>Confirm change</button>
+  <button>Confirm change</button>
 </form>
